Event.summary (composite attribute)

--- a/app/views/events/_event.ics.erb
+++ b/app/views/events/_event.ics.erb
@@ -5,7 +5,7 @@ DTSTAMP:<%= ics_time(Time.now) %>
 UID:<%= ics_uuid(event_url(event)) %>
 CREATED:<%= ics_time(event.created_at) %>
 LAST-MODIFIED:<%= ics_time(event.updated_at) %>
-SUMMARY:<%= event.name %><%# FIXME .title (composite method) %>
+SUMMARY:<%= event.summary.html_safe %>
 <%= ics_fold("DESCRIPTION:#{event.leader_notes}") %><%# FIXME .description (composite method) %>
 LOCATION:Location<%# FIXME .resource_names (composite method) %>
 ORGANIZER;CN=Joe Bloggs:MAILTO:bloggs@example.com<%# FIXME %>
