--- a/app/views/events/index.ics.erb
+++ b/app/views/events/index.ics.erb
@@ -1,6 +1,12 @@
 BEGIN:VCALENDAR
 VERSION:2.0
 PRODID:-//Shepherd-Lutheran.org//CCB Resources//EN
+NAME:SoV Setup Calendar
+X-WR-CALNAME:SoV Setup Calendar
+TIMEZONE-ID:America/Chicago
+X-WR-TIMEZONE:America/Chicago
+REFRESH-INTERVAL;VALUE=DURATION:PT12H
+X-PUBLISHED-TTL:PT12H
 CALSCALE:GREGORIAN
 METHOD:PUBLISH
 <%= render @events -%>
