Config for ICS VCALENDAR properties

--- a/app/views/events/index.ics.erb
+++ b/app/views/events/index.ics.erb
@@ -1,10 +1,10 @@
 BEGIN:VCALENDAR
 VERSION:2.0
-PRODID:-//Shepherd-Lutheran.org//CCB Resources//EN
-NAME:SoV Setup Calendar
-X-WR-CALNAME:SoV Setup Calendar
-TIMEZONE-ID:America/Chicago
-X-WR-TIMEZONE:America/Chicago
+PRODID:-//<%= ics_prodid_domain %>//CCB Resources//EN
+NAME:<%= ics_name %>
+X-WR-CALNAME:<%= ics_name %>
+TIMEZONE-ID:<%= ics_time_zone %>
+X-WR-TIMEZONE:<%= ics_time_zone %>
 REFRESH-INTERVAL;VALUE=DURATION:PT12H
 X-PUBLISHED-TTL:PT12H
 CALSCALE:GREGORIAN
