--- a/app/views/events/_event_common.ics.erb
+++ b/app/views/events/_event_common.ics.erb
@@ -1,6 +1,6 @@
-DTSTAMP:<%= ics_time(Time.now) %>
-CREATED:<%= ics_time(event.created_at) %>
-LAST-MODIFIED:<%= ics_time(event.updated_at) %>
+DTSTAMP<%= ics_time(Time.now) %>
+CREATED<%= ics_time(event.created_at) %>
+LAST-MODIFIED<%= ics_time(event.updated_at) %>
 <%= ics_fold("DESCRIPTION:#{event.notes}") %>
 <%= ics_fold("LOCATION:#{event.resource_names.join(',')}") %>
 <% unless event.organizer.blank? -%>
